# Lab3_Devops

./: .HTTP_server.cpp.swp  .nginx.conf.swp  .scriptB.sh.swp  CMakeLists.txt  Dockerfile  HTTP_server  HTTP_server.cpp  Makefile  Makefile.am  Makefile.in  autodeploy.sh  config.status  configure  configure.ac  configure~  deb.deb  euler.cpp  euler.h  main.cpp  mainServer.cpp  main_test.cpp  program  scriptA.sh  scriptB.sh  server  test_HTTP_server  test_HTTP_server.cpp  test_euler.cpp  test_program  test_server
.deps/: euler.Po  main.Po
.github/workflows/: automake.yml  ci.yml  docker_test.yml  package_deb.yml  test.yml
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
deb/DEBIAN/: control
