PACKAGE = program
VERSION = 1.0
PACKAGE_BUGREPORT = daryna.nahaivska2017@gmail.com

AUTOMAKE_OPTIONS = foreign subdir-objects

TESTS = test_euler.cpp
bin_PROGRAMS = program
your_program_name_SOURCES = main.cpp euler.cpp

check_PROGRAMS = test_program

test_program_SOURCES = test_euler.cpp euler.cpp

